--- a/.sync.yml
+++ b/.sync.yml
@@ -40,3 +40,5 @@ spec/spec_helper.rb:
   unmanaged: false
 .github/workflows/nightly.yml:
   unmanaged: false
+.github/workflows/auto_release.yml:
+  unmanaged: false
